# giri

./: .gitignore  .travis.yml  Dockerfile  LICENSE.TXT  Makefile  Makefile.common.in  Makefile.llvm.rules  README  README.md  clang-build-commands.txt  commands.txt  configure
autoconf/: AutoRegen.sh  aclocal.m4  configure.ac  mkinstalldirs
autoconf/autom4te.cache/: output.1  requests  traces.0  traces.1
docs/: index.html  llvm-blog.html
docs/GSOC2013/: main.tex  references.bib
docs/GSoC2013/proposal/: Makefile  main.tex  references.bib
docs/GSoC2013/report/: Makefile  main.tex  references.bib  struct-ptr.c
docs/blog/: giri-flow.vsd  llvm-blog.html
docs/report/: Makefile  references.bib
include/: BasicBlockNumbering.h  defs.h  sample.h.back
include/Giri/: Giri.h  Runtime.h  TraceFile.h
include/Utility/: BasicBlockNumbering.h  CountSrcLines.h  LoadStoreNumbering.h  PostDominanceFrontier.h  SourceLineMapping.h  Utils.h  VectorExtras.h
include/diagnosis/: BasicBlockNumbering.h  CountSrcLines.h  CountSrcLines.h~  PostDominanceFrontier.h~  PostDominatorFrontier.h~
include/giri/: CountSrcLines.h~  TraceFile.h
include/inv/: inv_generate.h  inv_utils.h
include/tarantula/: Tarantula.h
lib/: Makefile
lib/Giri/: CountSrcLines.cpp~  Giri.cpp  Makefile  TestPass.cpp  TraceFile.cpp  TracingNoGiri.cpp
lib/Tarantula/: Makefile  Tarantula.cpp.temp
lib/Utility/: BasicBlockNumbering.cpp  CountSrcLines.cpp  CountSrcLines.cpp~  LoadStoreNumbering.cpp  Makefile  PostDominatorFrontier.cpp  PostDominatorFrontier.cpp~  SourceLineMapping.cpp
lib/inv_generate/: Makefile  inv_generate.cpp  inv_insert.back  inv_insert.cpp  sample.cpp.back
runtime/: Makefile
runtime/Giri/: Makefile  Tracing.cpp
runtime/ddg/: Makefile  libddgtrace.CallPathRetValue  libddgtrace.c  libddgtrace.c1  libddgtrace.cpp  libddgtrace_debug.c
runtime/giri/: Makefile  Tracing.cpp
scripts/: condor_inv_elim.sh  process-invariants.c  process-invariants.out
test/: Makefile  Makefile.common  Makefile.diagnosis  TEST.tamashigiri.Makefile  TEST.tamashigiri.report  auto-tests.txt
test/HelloWorld/: Makefile  hello-world.c
test/UnitTests/: Makefile.common
test/UnitTests/test1/: Invariants.txt  Makefile  README.md  ans-inst.txt  extlibcalls.bc  extlibcalls.c  extlibcalls.inv.bc  extlibcalls.inv.s
test/UnitTests/test10/: Makefile  README.md  ans-inst.txt  str.c
test/UnitTests/test11/: Makefile  README.md  ans-inst.txt  hello2p.c
test/UnitTests/test12/: Makefile  ans-inst.txt  psum.c
test/UnitTests/test13/: Makefile  README.md  ans-inst.txt  struct.c
test/UnitTests/test14/: Makefile  README.md  ans-inst.txt  struct-ptr.c
test/UnitTests/test15/: Makefile  ans-inst.txt  hanoi.c
test/UnitTests/test16/: Makefile  README.md  ans-inst.txt  calc.c  calc.h  struct-ptr.c
test/UnitTests/test17/: Makefile  README.md  ans-inst.txt  criterion-inst.txt  criterion-loc.txt  loc.txt  plower.c
test/UnitTests/test18/: Makefile  README.md  ans-inst.txt  extlibcalls.c
test/UnitTests/test19/: Makefile  README.md  ans-inst.txt  fibonacci.c
test/UnitTests/test2/: Makefile  README.md  ans-inst.txt  ifelse.c  script  test.c
test/UnitTests/test20/: Makefile  README.md  ans-inst.txt  even.c
test/UnitTests/test21/: Makefile  README.md  ans-inst.txt  criterion-inst.txt  hwtype.c
test/UnitTests/test22/: Makefile  ans-inst.txt  criterion-inst.txt  fp.c
test/UnitTests/test3/: Invariants.txt  Makefile  README.md  ans-inst.txt  fibonacci.c  rec-calls.bc  rec-calls.c  rec-calls.inv.bc  rec-calls.inv.s
test/UnitTests/test4/: Makefile  README.md  ans-inst.txt  ans-loc.txt  example.c  inst.txt  loc.txt  start-slice.txt
test/UnitTests/test5/: Makefile  README.md  ans-inst.txt  hellothreads.c
test/UnitTests/test6/: Makefile  README.md  (+1 more)
test/hello-world/: Makefile  hello-world.c  hello-world.slice.txt
test/histogram/: Makefile  README.md  histogram-pthread.c  histogram-seq.c  loc-pthread.txt
test/kmeans/: Makefile  ans-inst-pthread.txt  ans-loc-pthread.txt  ans-loc-seq.txt  criterion-inst-seq.txt  criterion-loc-pthread.txt  criterion-loc-seq.txt  inst-pthread.txt  kmeans-pthread.c  kmeans-seq.c
test/linear_regression/: Makefile  README.md  linear_regression-pthread.c  linear_regression-seq.c  loc-pthread.txt
test/matrix_multiply/: .gitignore  Makefile  README.md  ans-inst-pthread.txt  ans-inst-seq.txt  ans-loc-seq.txt  criterion-inst-pthread.txt  criterion-inst-seq.txt  criterion-loc-pthread.txt  loc-seq.txt  matrix_file_A.txt  matrix_file_B.txt  matrix_multiply-pthread.c  matrix_multiply-seq.c  matrix_multiply.c
test/pca/: Makefile  README.md  ans-inst-pthread.txt  ans-loc-pthread.txt  ans-loc-seq.txt  inst-pthread.txt  inst-seq.txt  loc-pthread.txt  loc-seq.txt  pca-pthread.c  pca-seq.c  pca.c
test/word_count/: Makefile  README.md  word_count-pthread.c  word_count-seq.c
tools/: Makefile
tools/LTO/: LTOCodeGenerator.cpp.temp  Makefile
tools/PrintTrace/: Makefile  PrintTrace.cpp
tools/Tarantula/: Makefile  Tarantula.cpp  Tarantula.h
tools/Tracer/: Makefile  Tracer.cpp
utils/: build.sh  install_llvm.sh
(+11 files in other folders)
